[gd_scene load_steps=5 format=3 uid="uid://c4edoby56uxvt"]

[ext_resource type="Script" uid="uid://dsblm8u0fm62u" path="res://scenes/ui/in_game/skill_ui.gd" id="1_wuysf"]
[ext_resource type="Texture2D" uid="uid://duug6umvolwfy" path="res://assets/images/skills/holder.png" id="2_dd3oo"]
[ext_resource type="Texture2D" uid="uid://8s44q13akl5k" path="res://assets/images/skills/carrot.png" id="3_dd3oo"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_70vka"]
texture = ExtResource("2_dd3oo")

[node name="SkillUI" type="Control"]
custom_minimum_size = Vector2(26, 26)
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = -8.0
grow_vertical = 0
mouse_filter = 2
script = ExtResource("1_wuysf")
disabled_color = Color(0.384314, 0.407843, 0.478431, 1)

[node name="Button" type="Button" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(26, 26)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -13.0
offset_top = -13.0
offset_right = 13.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 8
theme_override_styles/focus = SubResource("StyleBoxTexture_70vka")
theme_override_styles/disabled = SubResource("StyleBoxTexture_70vka")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_70vka")
theme_override_styles/hover = SubResource("StyleBoxTexture_70vka")
theme_override_styles/pressed = SubResource("StyleBoxTexture_70vka")
theme_override_styles/normal = SubResource("StyleBoxTexture_70vka")

[node name="SkillIcon" type="TextureRect" parent="Button"]
unique_name_in_owner = true
custom_minimum_size = Vector2(26, 26)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -13.0
offset_top = -13.0
offset_right = 13.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("3_dd3oo")

[node name="CooldownLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -6.5
offset_top = -10.5
offset_right = 7.5
offset_bottom = 9.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 4
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
